--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -25,3 +25,24 @@ body{
 .login-dl{
   display: none;
 }
+.layui-form {
+  padding: 0 30px;
+}
+.liks{
+  display: flex;
+  justify-content: flex-end;
+}
+.liks a {
+  font-size: 12px;
+}
+.layui-form-item{
+  position: relative;
+}
+.layui-icon{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+.layui-input{
+  padding: 0 30px;
+}
